[gd_scene load_steps=14 format=3 uid="uid://c4a77vtbtgmso"]

[ext_resource type="PackedScene" uid="uid://cbkh2tq3o0xwf" path="res://entity/enemy/enemy.tscn" id="1_6bcyk"]
[ext_resource type="Texture2D" uid="uid://3gcvkfr45kyh" path="res://entity/enemy/shield/full.png" id="2_m16ve"]
[ext_resource type="Script" uid="uid://jcmkyiot43sp" path="res://entity/enemy/shield/enemy_shield.gd" id="2_svjct"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rog87"]
size = Vector2(993, 279)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8u84x"]
size = Vector2(62, 215.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m16ve"]
size = Vector2(75, 231)

[sub_resource type="Animation" id="Animation_svjct"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_m16ve"]
resource_name = "idle"
length = 1.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.90000004, 1, 1.1, 1.2, 1.3000001),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_rog87"]
resource_name = "pre_attack"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_8u84x"]
resource_name = "move"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_uf21k"]
resource_name = "hurt"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_lwtl4"]
resource_name = "die"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.90000004),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 61, 62, 63, 64, 65]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_svjct"]
_data = {
&"RESET": SubResource("Animation_svjct"),
&"die": SubResource("Animation_lwtl4"),
&"hurt": SubResource("Animation_uf21k"),
&"idle": SubResource("Animation_m16ve"),
&"move": SubResource("Animation_8u84x"),
&"pre_attack": SubResource("Animation_rog87")
}

[node name="EnemyShield" instance=ExtResource("1_6bcyk")]
script = ExtResource("2_svjct")
hp = 4

[node name="Sprite2D" type="Sprite2D" parent="Direction" index="0"]
unique_name_in_owner = true
position = Vector2(29, -133)
texture = ExtResource("2_m16ve")
flip_h = true
hframes = 14
vframes = 5
region_rect = Rect2(0, 308, 5080, 1232)

[node name="MarkerBoom" parent="Direction" index="1"]
position = Vector2(0, -119)

[node name="AreaDetective" type="Area2D" parent="Direction" index="2"]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/AreaDetective" index="0"]
position = Vector2(496.5, -143)
shape = SubResource("RectangleShape2D_rog87")

[node name="HitBox" type="Area2D" parent="Direction" index="3"]
unique_name_in_owner = true
visible = false
collision_layer = 32
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HitBox" index="0"]
position = Vector2(68, -112.25)
shape = SubResource("RectangleShape2D_8u84x")

[node name="CollisionShape2D" parent="." index="1"]
visible = false
position = Vector2(0, -116)
shape = SubResource("RectangleShape2D_m16ve")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_svjct")
}
autoplay = "idle"

[node name="TimerIdleMove" type="Timer" parent="." index="3"]
unique_name_in_owner = true
one_shot = true

[node name="TimerMove" type="Timer" parent="." index="4"]
unique_name_in_owner = true
one_shot = true

[connection signal="body_entered" from="Direction/HitBox" to="." method="player_body_hit"]
